--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-server.port=8082
 spring.application.name=reservation-service
-spring.datasource.url=jdbc:h2:mem:reservation-db
+spring.config.import=optional:consul:
