--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=reservation-service
 spring.config.import=optional:consul:
+
+spring.security.oauth2.client.registration.keycloak.client-name=keycloak
+spring.security.oauth2.client.registration.keycloak.client-id=resource-service
+spring.security.oauth2.client.registration.keycloak.client-secret=K5G5LKltGpDvYih9lIqiunwa9TdlmUbq
+spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email,offline_access
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri=${KEYCLOAK_REDIRECT_URI:http://localhost:8090/login/oauth2/code/resource-service}
+spring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/ds-exam-realm}
